--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "lodash": "^4.17.4"
   },
   "devDependencies": {
-    "eslint": "^4.7.2",
-    "eslint-config-airbnb-base": "^12.0.0",
-    "eslint-config-airbnb-standard": "^1.4.1",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-airbnb-standard": "^1.5.0",
     "eslint-plugin-import": "^2.7.0"
   }
 }
